--- a/index.html
+++ b/index.html
@@ -46,6 +46,26 @@
   </section>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=678fc8eb0051ef14f18f0320" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
+
+<script>
+// Wait for page to fully load
+window.addEventListener('load', function() {
+  // Extract email from URL hash (e.g., #john@gmail.com)
+  const emailFromUrl = decodeURIComponent(window.location.hash.substring(1));
+  
+  // Basic validation (must contain @ and ., and no spaces)
+  if (/^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(emailFromUrl)) {
+    // Fill the FIRST email input found
+    const emailInput = document.querySelector('input[type="email"]');
+    if (emailInput) {
+      emailInput.value = emailFromUrl;
+      // Optional: Trigger validation if needed
+      emailInput.dispatchEvent(new Event('input'));
+    }
+  }
+});
+</script>
+
   <script>
   $(document).ready(function () {
     $("#email-form").submit(function (event) {
